--- a/yalla/README
+++ b/yalla/README
@@ -1,5 +1,5 @@
-YALLA : an LL library for Coq
-=============================
+YALLA: an LL library for Coq
+============================
 
 Yet Another deep embedding of Linear Logic in Coq
 
@@ -24,18 +24,21 @@ Parameters allow the user:
  - to include the mix2 rule or not;
  - to define arbitrary axioms
      (which allows in particular to work with open proofs);
- - to use the usual exchange rule (arbitrary permutations);
+ - to use the usual exchange rule (arbitrary permutations)
    or to restrict to cyclic linear logic (cyclic permutations only).
 
-This library is not appropriate to build LL proofs by hands, but more
-for the study of meta-properties of linear logic fragments.
+This library is probably not so appropriate to build LL proofs by
+hands, but is more dedicated to the study of meta-properties of linear
+logic fragments.
 
 Because of the parameters, the proof predicates defined in the library
 should not be used directly. We recommend the user to define his own
-objects (inductives for formulas and proofs) and to interface them
-with the library in order to then import the results of the library in
-his lighter setting (examples of such interfaces are provided in the
-files mell2.v and lambek.v).
+objects (inductive types for formulas and proofs) and to interface
+them with the library in order to then import the results of the
+library in his lighter setting (examples of such interfaces are
+provided in the files mell2.v and lambek.v).
+It is possible to hide the explicit exchange rule by introducing
+multisets for sequents (see mell_mset.v).
 
 
 
@@ -72,6 +75,8 @@ Example files for interfaces:
     setoid multiset-based MELL
 - llpol.v(o)
     polarized fragment of LL
+- tl.v(o)
+    tensor logic
 
 Other files:
 
@@ -79,5 +84,7 @@ Other files:
     study of LL extended with the equation: bot = oc bot
 - nn.v(o)
     properties of double-negation translations from LL to ILL
+- consistency.v(o)
+     specific instances of axioms of the library
 
 
